--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vant/weapp": "^1.10.4",
     "core-js": "^3.8.3",
+    "unplugin-vue-components": "^0.22.8",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue3-marquee": "^3.1.2",
